--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>zjd.github.io by zhanjindong</title>
+    <title>zhanjidnong.github.io by zhanjindong</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>zjd.github.io</h1>
+        <h1>zhanjindong.github.io</h1>
         <h2></h2>
 
         <section id="downloads">
