--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="author" content="Yi Zeng">
-	<meta name="description" content="Yi Zeng, a software engineer based in Christchurch, New Zealand." />
-	<meta name="keywords" content="software,engineer,testing,christchurch,newzealand" />
+	<meta name="author" content="Jin Dong">
+	<meta name="description" content="Jin Dong, a software engineer based in Hefei, China." />
+	<meta name="keywords" content="software,engineer,testing,Hefei,China,iFlytek" />
 
-	<title>Yi Zeng</title>
+	<title>Jin Dong</title>
 
 	<link href='/assets/css/home-style.css' rel="stylesheet" type="text/css">
 
@@ -51,9 +51,9 @@
 	</noscript>
 
 	<div class="headings animated fadeInLeft">
-		<h1><span>Yi Zeng</span></h1>
+		<h1><span>Jin Dong</span></h1>
 		<h2><span>Software engineer</span></h2>
-		<h3><span>Christchurch, New Zealand</span></h3>
+		<h3><span>Hefei, China</span></h3>
 	</div>
 	<a class="btn-continue animated bounce" data-ga="More" href="#social"></a>
 </div>
@@ -61,10 +61,10 @@
 <div id="section1" class="section" data-name="social">
 	<h1 class="animated hidden"><a class="btn-enter btn-light" data-ga="Enter Blog" href="/blog">Enter blog</a></h1>
 	<div class="social-links animated hidden">
-		<a class="btn-light ico-linkedin" href="http://linkedin.com/in/yizengnz/" rel="me" target="_blank" title="LinkedIn Profile"></a>
-		<a class="btn-light ico-github" href="http://github.com/yizeng/" rel="me" target="_blank" title="GitHub Page"></a>
-		<a class="btn-light ico-gmail" href="http://scr.im/yizengme/" rel="me" target="_blank" title="Email Address"></a>
-		<a class="btn-light ico-stackoverflow" href="http://stackoverflow.com/users/1177636/yi-zeng" rel="me" target="_blank" title="StackOverflow Profile"></a>
+		<a class="btn-light ico-linkedin" href="http://linkedin.com/in/jindong/" rel="me" target="_blank" title="LinkedIn Profile"></a>
+		<a class="btn-light ico-github" href="http://github.com/zhanjindong/" rel="me" target="_blank" title="GitHub Page"></a>
+		<a class="btn-light ico-gmail" href="zhanjindong1989@qq.com/" rel="me" target="_blank" title="Email Address"></a>
+		<a class="btn-light ico-stackoverflow" href="http://stackoverflow.com/users/4186131/jindong" rel="me" target="_blank" title="StackOverflow Profile"></a>
 		<a class="btn-light ico-rss" href="/rss.xml" rel="me" target="_blank" title="RSS Feeds"></a>
 	</div>
 </div>
