--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<div class="social-links animated hidden">
 		<a class="btn-light ico-linkedin" href="http://linkedin.com/in/jindong/" rel="me" target="_blank" title="LinkedIn Profile"></a>
 		<a class="btn-light ico-github" href="http://github.com/zhanjindong/" rel="me" target="_blank" title="GitHub Page"></a>
-		<a class="btn-light ico-gmail" href="zhanjindong1989@qq.com/" rel="me" target="_blank" title="Email Address"></a>
+		<a class="btn-light ico-gmail" href="http://zhanjindong1989@qq.com/" rel="me" target="_blank" title="Email Address"></a>
 		<a class="btn-light ico-stackoverflow" href="http://stackoverflow.com/users/4186131/jindong" rel="me" target="_blank" title="StackOverflow Profile"></a>
 		<a class="btn-light ico-rss" href="/rss.xml" rel="me" target="_blank" title="RSS Feeds"></a>
 	</div>
