--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 <div id="section1" class="section" data-name="social">
 	<h1 class="animated hidden"><a class="btn-enter btn-light" data-ga="Enter Blog" href="/blog">Enter blog</a></h1>
 	<div class="social-links animated hidden">
-		<a class="btn-light ico-linkedin" href="http://linkedin.com/in/jindong/" rel="me" target="_blank" title="LinkedIn Profile"></a>
+		<a class="btn-light ico-linkedin" href="http://linkedin.com/in/jindongnz/" rel="me" target="_blank" title="LinkedIn Profile"></a>
 		<a class="btn-light ico-github" href="http://github.com/zhanjindong/" rel="me" target="_blank" title="GitHub Page"></a>
-		<a class="btn-light ico-gmail" href="zhanjindong1989@qq.com" rel="me" target="_blank" title="Email Address"></a>
+		<a class="btn-light ico-gmail" href="http://src.im/jindong" rel="me" target="_blank" title="Email Address"></a>
 		<a class="btn-light ico-stackoverflow" href="http://stackoverflow.com/users/4186131/jindong" rel="me" target="_blank" title="StackOverflow Profile"></a>
 		<a class="btn-light ico-rss" href="/rss.xml" rel="me" target="_blank" title="RSS Feeds"></a>
 	</div>
