modify the tigle

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="author" content="Jin Dong">
-	<meta name="description" content="Jin Dong, a software engineer based in Hefei, China." />
+	<meta name="author" content="Jindong">
+	<meta name="description" content="Jindong, a software engineer based in Hefei, China." />
 	<meta name="keywords" content="software,engineer,testing,Hefei,China,iFlytek" />
 
-	<title>Jin Dong</title>
+	<title>Jindong</title>
 
 	<link href='/assets/css/home-style.css' rel="stylesheet" type="text/css">
 
@@ -50,7 +50,7 @@
 	</noscript>
 
 	<div class="headings animated fadeInLeft">
-		<h1><span>Jin Dong</span></h1>
+		<h1><span>Jindong</span></h1>
 		<h2><span>Software engineer</span></h2>
 		<h3><span>Hefei, China</span></h3>
 	</div>
