--- a/assets/index.html
+++ b/assets/index.html
@@ -125,7 +125,9 @@ ga('send', 'pageview');
 	  <li>	
 	  <a href="/assets/pdf/High-performance-High-concurrency-Network-Architecture.pdf">High-performance-High-concurrency-Network-Architecture.pdf</a>
     </li>
-  
+	<li>	
+	  <a href="/assets/images/original/TCP.png">TCP State Machine</a>
+    </li>
 </ul>
                 </div><!-- entry-content -->
             </div><!-- bd -->
