--- a/assets/index.html
+++ b/assets/index.html
@@ -128,6 +128,9 @@ ga('send', 'pageview');
 	<li>	
 	  <a href="/assets/images/original/TCP.png">TCP State Machine</a>
     </li>
+	<li>	
+	  <a href="/assets/images/original/js-objects-treasure-map.png">Javascript Objects Treasure Map</a>
+    </li>
 </ul>
                 </div><!-- entry-content -->
             </div><!-- bd -->
