--- a/assets/index.html
+++ b/assets/index.html
@@ -59,9 +59,9 @@ ga('send', 'pageview');
             <a class="btn-close">Close</a>
             <div class="results">
                 <a href="/archives">Archives</a>
-                <a href="/categories/#articles">Articles</a>
-                <a href="/categories/#notes">Notes</a>
+                <a href="/categories/#articles">Articles</a>              
                 <a href="/categories">Categories</a>
+				 <a href="/assets">Assets</a>
                 <a href="/tags">Tags</a>
                 <a href="/">About</a>
             </div>
@@ -88,9 +88,9 @@ ga('send', 'pageview');
                                 <!--[if !IE]> --><button class="btn-search" data-ga="Search"></button><!-- <![endif]-->
                             </li>
                             <li class="nav-link"><a data-ga="Archives" href="/archives">Archives</a></li>
-                            <li class="nav-link"><a data-ga="Articles" href="/categories#articles">Articles</a></li>
-                            <li class="nav-link"><a data-ga="Notes" href="/categories#notes">Notes</a></li>
+                            <li class="nav-link"><a data-ga="Articles" href="/categories#articles">Articles</a></li>                            
                             <li class="nav-link"><a data-ga="Categories" href="/categories">Categories</a></li>
+							<li class="nav-link"><a data-ga="Assets" href="/assets">Assets</a></li>
                             <li class="nav-link"><a data-ga="Tags" href="/tags">Tags</a></li>
                             <!--[if !IE]> --><li class="nav-link"><a data-ga="Search" class="btn-search" href="#">Search</a></li><!-- <![endif]-->
                         </ul>
