--- a/assets/index.html
+++ b/assets/index.html
@@ -62,6 +62,7 @@ ga('send', 'pageview');
                 <a href="/categories/#articles">Articles</a>              
                 <a href="/categories">Categories</a>
 				 <a href="/assets">Assets</a>
+				 <a href="http://www.cnblogs.com/zhanjindong/">CnBlog</a>
                 <a href="/tags">Tags</a>
                 <a href="/">About</a>
             </div>
@@ -91,6 +92,7 @@ ga('send', 'pageview');
                             <li class="nav-link"><a data-ga="Articles" href="/categories#articles">Articles</a></li>                            
                             <li class="nav-link"><a data-ga="Categories" href="/categories">Categories</a></li>
 							<li class="nav-link"><a data-ga="Assets" href="/assets">Assets</a></li>
+							<li class="nav-link"><a data-ga="Assets" href="http://www.cnblogs.com/zhanjindong/">CnBlog</a></li>
                             <li class="nav-link"><a data-ga="Tags" href="/tags">Tags</a></li>
                             <!--[if !IE]> --><li class="nav-link"><a data-ga="Search" class="btn-search" href="#">Search</a></li><!-- <![endif]-->
                         </ul>
