--- a/assets/index.html
+++ b/assets/index.html
@@ -133,6 +133,9 @@ ga('send', 'pageview');
 	<li>	
 	  <a href="/assets/images/original/js-objects-treasure-map.png">Javascript Objects Treasure Map</a>
     </li>
+	<li>	
+	  <a href="/assets/pdf/JVM-Tunning-Tools-Introduction.pdf">JVM Tunning Tools Introduction</a>
+    </li>
 </ul>
                 </div><!-- entry-content -->
             </div><!-- bd -->
