--- a/assets/index.html
+++ b/assets/index.html
@@ -85,7 +85,7 @@ ga('send', 'pageview');
                         <ul>
                             <li class="logo nav-link">
                                 <button class="btn-menu" data-ga="Menu"></button>
-                                <a href="/blog">Jindong</a>
+                                <a href="/blog"><img src="http://zhanjindong.com/assets/images/sign.png" /></a>
                                 <!--[if !IE]> --><button class="btn-search" data-ga="Search"></button><!-- <![endif]-->
                             </li>
                             <li class="nav-link"><a data-ga="Archives" href="/archives">Archives</a></li>
