--- a/assets/index.html
+++ b/assets/index.html
@@ -178,9 +178,9 @@ ga('send', 'pageview');
                             
                         </div>
                         <div class="social-links">
-                            <a class="ico-linkedin" href="http://linkedin.com/in/zhanjindongnz/" rel="me" target="_blank" title="LinkedIn Profile"></a>
+                            <a class="ico-linkedin" href="http://linkedin.com/in/zhanjindong/" rel="me" target="_blank" title="LinkedIn Profile"></a>
                             <a class="ico-github" href="http://github.com/zhanjindong/" rel="me" target="_blank" title="GitHub Page"></a>
-                            <a class="ico-gmail" href="http://scr.im/zhanjindongme/" rel="me" target="_blank" title="Email Address"></a>
+                            <a class="ico-gmail" href="mailto:jdzhan@live.com" rel="me" target="_blank" title="Email Address"></a>
                             <a class="ico-stackoverflow" href="http://stackoverflow.com/users/4186131/jindong" rel="me" target="_blank" title="StackOverflow Profile"></a>
                             <a class="ico-rss" href="/rss.xml" rel="me" target="_blank" title="RSS Feeds"></a>
                         </div>
